@@ -1,3 +1,9 @@
+WIP
+-----------------------------
+* Weather Widget
+  - Add "decimal_places_temperature" option (requested by user "Dean688"). Default is "1" decimal place, set to "0" to hide decimals.
+    Note, when number of digits is less than expected, extra leading zero or decimal place will be added to fill the gap.
+
 2.29.2 (2025-05-29)
 -----------------------------
 * RestAPI Module
